# NotepadPlus

./: LICENSE  NotePad-L-0.1.0-win64.msi  README.md  THIRD-PARTY-NOTICES
resources/: NotePad-L.rc
src/: CMakeLists.txt  resource.h
src/Diff/: FileMapping.cpp  FileMapping.h  FolderCompareView.cpp  FolderCompareView.h  FolderCompareWindow.cpp  FolderCompareWindow.h  FolderScanner.cpp  FolderScanner.h  HexCompareView.cpp  HexCompareView.h  HexCompareWindow.cpp  HexCompareWindow.h  LineDiff.cpp  LineDiff.h  TextCompareWindow.cpp  TextCompareWindow.h
src/Notepad_plus/: Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_Window.cpp  Notepad_plus_Window.h
src/Parameters/: Parameters.cpp  Parameters.h  Stylers.cpp  Stylers.h
src/ScintillaComponent/: FindInFilesDlg.cpp  FindReplaceDlg.cpp  FindReplaceDlg.h  ScintillaEditView.cpp  ScintillaEditView.h
src/WinControls/TabBar/: DocTabView.cpp  DocTabView.h
